# ProjetChipEight

./: .gitignore  CMakeLists.txt  README.md  chip8.c  chip8.h  main.c
hardware/: memory.c  memory.h  processor.c  processor.h  register.c  register.h  stack.c  stack.h  timer.c  timer.h
libprovided/include/display/: display.h  sprite.h
libprovided/include/keyboard/: keyboard.h
libprovided/include/speaker/: speaker.h
